--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
-    "mysql": "^2.18.1"
+    "memory-cache": "^0.2.0",
+    "mysql": "^2.18.1",
+    "pokedex-promise-v2": "^3.2.0",
+    "pokemontcgsdk": "^1.1.0"
+  },
+  "devDependencies": {
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.4"
   }
 }
